[package]
name = "r2d2-sqlite3"
version = "0.2.1"
authors = ["Jovansonlee Cesar<ivanceras@gmail.com>"]
license = "MIT"
description = "Sqlite support for the r2d2 connection pool"
repository = "https://github.com/ivanceras/r2d2-sqlite"
documentation = "https://docs.rs/r2d2_sqlite/"
keywords = ["sqlite", "r2d2", "pool"]


[dependencies]
r2d2 = "0.7.4"
sqlite = "0.23.9"

[dev-dependencies]
tempdir = "0.3"
