[package]
name = "r2d2-sqlite3"
version = "0.1.0"
authors = ["Jovansonlee Cesar<ivanceras@gmail.com>"]
license = "MIT"
description = "Sqlite support for the r2d2 connection pool"
repository = "https://github.com/ivanceras/r2d2-sqlite3"
documentation = "https://docs.rs/r2d2-sqlite3/"
keywords = ["sqlite", "r2d2", "pool"]


[dependencies]
r2d2 = "0.8"
sqlite = {path = "../sqlite", version = "0.23.9"}

[dev-dependencies]
tempdir = "0.3"
