[package]
name = "r2d2-sqlite3"
version = "0.1.1"
authors = ["Jovansonlee Cesar<ivanceras@gmail.com>"]
license = "MIT"
description = "Sqlite support for the r2d2 connection pool"
repository = "https://github.com/ivanceras/r2d2-sqlite3"
documentation = "https://docs.rs/r2d2-sqlite3/"
keywords = ["sqlite", "r2d2", "pool"]


[dependencies]
r2d2 = "0.8"
sqlite3 = "0.24.0"

[dev-dependencies]
tempdir = "0.3"
